# sockudo-actix

./: Cargo.toml
src/: app.rs  log.rs  main.rs  message.rs  namespace.rs  utils.rs  ws_handler.rs  ws_message.rs
src/adapter/: local_adapter.rs  mod.rs
src/channel_managers/: mod.rs  public_channel_manager.rs
