[package]
name = "sockudo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.114"
actix-web-actors = "4.3.0"
rand = "0.8.5"
chrono = "0.4.35"
colored = "2.1.0"
